src/ui/snapshots/blackjack__ui__card__tests__ace_of_spades.snap
---
source: src/ui/card.rs
expression: "render(CardWidget::face_up(Card::new(Rank::Ace, Suit::Spades)))"
---
"╭───────╮"
"│A♠     │"
"│       │"
"│       │"
"│   ♠   │"
"│       │"
"│       │"
"│     ♠A│"
"╰───────╯"
