src/ui/snapshots/blackjack__ui__card__tests__eight_of_diamonds.snap
---
source: src/ui/card.rs
expression: "render(CardWidget::face_up(Card::new(Rank::Eight, Suit::Diamonds)))"
---
"╭───────╮"
"│8♦     │"
"│ ♦   ♦ │"
"│   ♦   │"
"│ ♦   ♦ │"
"│   ♦   │"
"│ ♦   ♦ │"
"│     ♦8│"
"╰───────╯"
