src/ui/snapshots/blackjack__ui__card__tests__hole_card.snap
---
source: src/ui/card.rs
expression: "render(CardWidget::face_down(Card::new(Rank::Two, Suit::Spades)))"
---
"╭───────╮"
"│╱╲╱╲╱╲╱│"
"│╲╱╲╱╲╱╲│"
"│╱╲╱╲╱╲╱│"
"│╲╱╲╱╲╱╲│"
"│╱╲╱╲╱╲╱│"
"│╲╱╲╱╲╱╲│"
"│╱╲╱╲╱╲╱│"
"╰───────╯"
