src/ui/snapshots/blackjack__ui__card__tests__king_of_hearts.snap
---
source: src/ui/card.rs
expression: "render(CardWidget::face_up(Card::new(Rank::King, Suit::Hearts)))"
---
"╭───────╮"
"│K♥     │"
"│       │"
"│   ♥   │"
"│   K   │"
"│   ♥   │"
"│       │"
"│     ♥K│"
"╰───────╯"
