src/ui/snapshots/blackjack__ui__card__tests__ten_of_clubs.snap
---
source: src/ui/card.rs
expression: "render(CardWidget::face_up(Card::new(Rank::Ten, Suit::Clubs)))"
---
"╭───────╮"
"│10♣    │"
"│ ♣   ♣ │"
"│ ♣ ♣ ♣ │"
"│       │"
"│ ♣ ♣ ♣ │"
"│ ♣   ♣ │"
"│    ♣10│"
"╰───────╯"
